Remove gradle mention